Add Add todo item with unit test

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,9 +1,21 @@
 .App {
   text-align: center;
+  margin: auto;
 }
 
 .navbar {
   .title {
     margin: auto;
+  }
+}
+
+.list-item {
+  margin-top: 50px;
+}
+
+.add-todo {
+  .add-todo-button {
+    margin-top: 18px;
+    margin-right: 10px;
   }
 }
