--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -32,3 +32,11 @@
     width: 200px;
   }
 }
+
+.todo-summary {
+  margin-top: 30px;
+  .num-todos,
+  .checkbox-content {
+    display: inline-flex;
+  }
+}
